--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .look {
 background-image: url(hero-cover3.png);
 background-size: 100%;
@@ -75,10 +76,52 @@ width: 250px;
 height: 180px;
 background-color: #23A6F0;
 padding-left: 20px;
+color: white;
 }
 .services {
 display: flex;
 justify-content: center;
 }
+.level1 {
+border: 1px solid white;
+width: 230px;
+height: 180px;
+padding-left: 20px;
+text-align: center;
+}
+.level2 {
+border: 1px solid white;
+width: 230px;
+height: 180px;
+padding-left: 20px;
+text-align: center;
+}
+.level3 {
+border: 1px solid white;
+width: 230px;
+height: 180px;
+padding-left: 20px;
+text-align: center;
+}
+.levels {
+display: flex;
+justify-content: center;
+padding-top: 150px;
+background-color: white;
+}
+.industry {
+text-align: center;
+width: 390px;
+padding-top: 200px;
+}
+.user1 {
+border: 1px solid grey;
+width: 250px;
+justify-content: center;
 
+}
+.lady1 {
+height: 200px;
+padding: ;
+}
 
