--- a/style.css
+++ b/style.css
@@ -5,13 +5,26 @@ background-size: 100%;
 background-repeat: no-repeat;
 height: 800px;
 color: white;
-
+}
+body {
+background-color: #eff6fc;
 }
 .header {
 display: flex;
-justify-content: space-around;
-margin-top: 10px;
+justify-content: space-between;
+margin-top: 20px;
+margin-left: 100px;
 height: 20px;
+padding-top: 30px;
+}
+button {
+background-color: #23A6F0;
+padding-bottom: 5px;
+padding-top: 5px;
+padding-bottom: 8px;
+padding-left: 25px;
+padding-right: 25px;
+color: white;
 }
 .first {
 padding-top: 150px;
@@ -38,6 +51,10 @@ padding-top: 10px;
 .login {
 padding-top: 15px;
 }
+.signup {
+padding-top: 20px;
+padding-right: 200px;
+}
 .buttons {
 padding-top: 30px;
 }
@@ -58,14 +75,9 @@ padding-right: 10px;
 padding-left: 10px;
 border-radius: 25px;
 }
-.service1 {
+.service {
 border: 1px solid white;
-width: 250px;
-height: 180px;
-padding-left: 20px;
-}
-.service2 {
-border: 1px solid white;
+background-color: white;
 width: 250px;
 height: 180px;
 padding-left: 20px;
@@ -81,22 +93,9 @@ color: white;
 .services {
 display: flex;
 justify-content: center;
+column-gap: 40px;
 }
-.level1 {
-border: 1px solid white;
-width: 230px;
-height: 180px;
-padding-left: 20px;
-text-align: center;
-}
-.level2 {
-border: 1px solid white;
-width: 230px;
-height: 180px;
-padding-left: 20px;
-text-align: center;
-}
-.level3 {
+.level {
 border: 1px solid white;
 width: 230px;
 height: 180px;
@@ -106,25 +105,85 @@ text-align: center;
 .levels {
 display: flex;
 justify-content: center;
-padding-top: 150px;
+padding-top: 50px;
+padding-bottom: 50px;
 background-color: white;
 }
-.industry {
+.subtitle {
 text-align: center;
 width: 390px;
-padding-top: 200px;
+padding-top: 100px;
+padding-left: 500px;
+padding-bottom: 50px;
 }
-.user1 {
+.user {
 border: 1px solid grey;
 width: 250px;
-height: 300px;
+height: 320px;
+justify-content: center;
+padding-left: 10px;
+border-radius: 5px;
+}
+.person {
+height: 140px;
+padding-left: 44px;
+padding-top: 30px;
+}
+.star {
+padding-left: 40px;
+} 
+.users {
+display: flex;
+justify-content: center;
+column-gap: 50px;
+}
+.logos {
+  display: flex;
+justify-content: center;
+justify-content: space-between;
+margin-left: 300px;
+margin-right: 300px;
+padding-bottom: 50px;
+padding-top: 150px;
+}
+.logo {
+height: 30px;
+}
+.news {
+display: flex;
+justify-content: space-around;
+margin-left: 200px;background-color: #eff6fc;
+margin-right: 200px;
+height: 50px;
+border: 1px solid purple;
+height: 60px;
+padding-top: 10px;
+background: linear-gradient(#4568ff 50% purple 50% );
+}
+.post {
+padding-top: 10px;
+}
+.input {
+padding-top: 7px;
+padding-bottom: 7px;
+margin-right: 1px;
+}
+.PREFS {
+border: 1px solid blue;
+width: 250px;
+height: 400px;
 justify-content: center;
 padding-left: 20px;
 border-radius: 5px;
 }
-.lady1 {
-height: 140px;
-padding-left: 45px;
-padding-top: 30px;
+.FSP {
+display: flex;
+justify-content: center;
+}
+ul {
+list-style: none;
+}
+.trials {
+text-align: center;
 }
 
