--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ padding-top: 30px;
 }
 button {
 background-color: #23A6F0;
-padding-bottom: 5px;
-padding-top: 5px;
+height: 37px;
 padding-bottom: 8px;
 padding-left: 25px;
 padding-right: 25px;
@@ -52,8 +51,9 @@ padding-top: 10px;
 padding-top: 15px;
 }
 .signup {
-padding-top: 20px;
-padding-right: 200px;
+margin-right: 200px;
+margin-top: 23px;
+
 }
 .buttons {
 padding-top: 30px;
@@ -83,7 +83,6 @@ height: 180px;
 padding-left: 20px;
 }
 .service3 {
-border: 1px solid white;
 width: 250px;
 height: 180px;
 background-color: #23A6F0;
@@ -94,6 +93,8 @@ color: white;
 display: flex;
 justify-content: center;
 column-gap: 40px;
+margin-top: -155px;
+margin-bottom: 100px;
 }
 .level {
 border: 1px solid white;
@@ -138,7 +139,7 @@ justify-content: center;
 column-gap: 50px;
 }
 .logos {
-  display: flex;
+display: flex;
 justify-content: center;
 justify-content: space-between;
 margin-left: 300px;
@@ -168,12 +169,17 @@ width: 300px;
 height: 29px;
 }
 .PREFS {
-border: 1px solid blue;
+border: 1px solid #23A6F0;
 width: 250px;
 height: 430px;
 justify-content: center;
 padding-left: 10px;
 border-radius: 5px;
+}
+.dollar {
+color: #23A6F0;
+font-size: 24px;
+font-weight: bolder;
 }
 .FSP {
 display: flex;
@@ -195,7 +201,6 @@ margin-top: -20px;
 margin-top: 35px;
 margin-left: 55px;
 width: 150px;
-height: 35px;
 }
 .worldmap {
 height: 180px;
@@ -210,6 +215,7 @@ background-color: #252B42;
 color: white;
 padding-top: 40px;
 height: 600px;
+
 }
 .family {
 height: 600px;
@@ -223,6 +229,7 @@ padding-left: 40px;
 .booking {
 display: flex;
 justify-content: center;
+margin-top: -300px;
 }
 .form {
 text-align: center;
@@ -232,7 +239,7 @@ text-align: center;
   height: 37px;
 }
 .BA {
-height: 37px;
+
 width: 300px;
 margin-top: 77px;
 }
@@ -241,3 +248,22 @@ display: flex;
 justify-content: space-around;
 padding-top: 100px;
 }
+.contact {
+height: ;
+}
+.credits {
+display: flex;
+justify-content: space-around;
+background-color: white;
+margin-top: 20px;
+padding-top: 20px;
+padding-left: 60px;
+padding-right: 80px;
+}
+.byme {
+display: flex;
+justify-content: space-between;
+margin-left: 100px;
+margin-right: 100px;
+margin-top: 9px;
+} 
