--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ font-family: sans-serif;
 }
 .header {
 display: flex;
-justify-content: space-between;
+justify-content: space-around;
 margin-top: 20px;
 margin-left: 100px;
 height: 20px;
@@ -25,6 +25,7 @@ padding-bottom: 8px;
 padding-left: 25px;
 padding-right: 25px;
 color: white;
+border-radius: 3px;
 }
 .first {
 padding-top: 150px;
@@ -38,10 +39,11 @@ font-weight: bold;
 font-size: 18px;
 }
 .navbar {
-text-decoration: none;
-justify-content: space-between;
 padding-top: 32px;
 color: white;
+}
+.navbox a {
+justify-content: space-between;
 }
 .name {
 font-family: 'Montserrat';
@@ -51,10 +53,13 @@ padding-top: 10px;
 .login {
 padding-top: 15px;
 }
+a {
+color: white;
+text-decoration: none;
+}
 .signup {
 margin-right: 200px;
 margin-top: 23px;
-
 }
 .buttons {
 padding-top: 30px;
@@ -125,6 +130,7 @@ height: 320px;
 justify-content: center;
 padding-left: 10px;
 border-radius: 5px;
+background-color: white;
 }
 .person {
 height: 140px;
@@ -154,13 +160,12 @@ height: 30px;
 .news {
 display: flex;
 justify-content: space-around;
-margin-left: 200px;background-color: #eff6fc;
+margin-left: 200px;
 margin-right: 200px;
-height: 50px;
-border: 1px solid purple;
+background-color: linear-gradient(90deg#4568ff 50% purple 50% );
 height: 60px;
 padding-top: 10px;
-background: linear-gradient(#4568ff 50% purple 50% );
+border: 1px solid purple;
 }
 .post {
 padding-top: 10px;
@@ -189,6 +194,7 @@ padding-bottom: 100px;
 }
 ul {
 list-style: none;
+
 }
 .trials {
 text-align: center;
@@ -210,13 +216,13 @@ height: 180px;
 display: flex;
 justify-content: space-between;
 justify-content: space-around;
-margin-left: 100px;
-margin-right: 100px;
+margin-left: 50px;
+margin-right: 50px;
 background-color: #252B42;
+background-size: cover;
 color: white;
 padding-top: 40px;
 height: 600px;
-
 }
 .family {
 height: 600px;
@@ -236,11 +242,10 @@ margin-top: -300px;
 text-align: center;
 }
 .value {
-  width: 300px;
-  height: 37px;
+width: 300px;
+height: 37px;
 }
 .BA {
-
 width: 300px;
 margin-top: 77px;
 }
@@ -249,17 +254,14 @@ display: flex;
 justify-content: space-around;
 padding-top: 100px;
 }
-.contact {
-height: ;
-}
 .credits {
 display: flex;
 justify-content: space-around;
 background-color: white;
 margin-top: 20px;
 padding-top: 20px;
-padding-left: 60px;
-padding-right: 80px;
+padding-left: 30px;
+padding-right: 50px;
 }
 .byme {
 display: flex;
@@ -268,3 +270,8 @@ margin-left: 100px;
 margin-right: 100px;
 margin-top: 9px;
 } 
+
+
+
+
+  
